fix overflow on mobile

--- a/numerc/static/numerc/styles.css
+++ b/numerc/static/numerc/styles.css
@@ -109,6 +109,10 @@
 	--sansSerif: "avenir", "-apple-system", "BlinkMacSystemFont", "avenir next",  "segoe ui", "helvetica neue", "helvetica", "Ubuntu", "roboto", "noto", "arial", "sans-serif"; 
 	}
 /* global styles */
+	html {
+		overflow-x: hidden;
+		max-width: 100%;
+	}
 	* {
 		box-sizing: border-box;
 		text-rendering: optimizeSpeed;
@@ -586,6 +590,7 @@
 /* PopUp - Class names are used in JavaScript code */
 	.pop {
 		cursor: pointer;
+		margin-left: -0.55em;
 		border-bottom: dotted thin rgb(146, 146, 146);
 	}
 	.popText {
@@ -598,12 +603,12 @@
 	.show {
 		position: absolute;
 		z-index: 1;
+		width: 75%;
 		background: white;
 		border: solid thin lightgray;
 		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 		color: var(--textColor);
-		padding: .5em;
-		font-weight: bold;
+		padding: 0.5em;
 		
 		visibility: visible;
 		opacity: 1;
@@ -612,12 +617,14 @@
 		transition: visibility 0.5s, opacity 0.7s, max-height 0.7s linear;
 	}
 	.show p {
-		padding: 0.2rem;
+		padding: 0;
+		white-space: normal;
 		margin: 0;
+		font-family: var(--serif);
+	}
+	.show * {
 		font-size: 0.7rem;
 	}
-
-
 /* Drop cap */
 	span.drop {
 		float: left;
@@ -753,9 +760,8 @@
 	ol.recipe li:before {
 		content: counter(li);
 		counter-increment: li;
-		background-color: rgb(255, 233, 233);
-		color: rgb(151, 0, 0);
-		border: solid thin var(--darkRed);
+		background-color: var(--darkRed);
+		color: white;
 		border-radius: 50%;
 		font-size: 0.69rem;
 		width: 19px;
@@ -767,26 +773,18 @@
 		left: 0;
 	}
 	ol.recipe ol li::before {
-		color: rgb(156, 112, 0);
-		background-color: rgb(255, 244, 223);
-		border: solid thin rgb(190, 136, 0);
+		background-color: rgb(233, 151, 0);
 		
 	}
 	ol.recipe ol ol li::before {
-		color: rgb(0, 98, 0);
-		background-color: rgb(225, 255, 204);
-		border: solid thin var(--darkGreen);
+		background-color: var(--darkGreen);
 		
 	}
 	ol.recipe ol ol ol li::before {
-		color: rgb(0, 91, 156);
-		background-color: rgb(231, 248, 255);
-		border: solid thin rgb(0, 90, 192);
+		background-color: var(--darkBlue);
 	}
 	ol.recipe ol ol ol ol li::before {
-		color: rgb(120, 0, 120);
-		background-color: rgb(243, 199, 243);
-		border: solid thin purple;
+		background-color: rgb(158, 0, 158);
 	}
 	/* Special list for code general syntax */
 		ul.syntax {
@@ -1117,12 +1115,13 @@
 		content: counter(lineNumber);
 		color: rgb(144, 144, 144);
 		padding: 3px;
+		margin: 0;
 	}
-	ol.alg>li::before {width: 1.8em;}
-	ol.alg>ol>li::before {width: 3.8em;}
-	ol.alg>ol>ol>li::before {width: 5.8em;}
-	ol.alg>ol>ol>ol>li::before {width: 7.8em;}
-	ol.alg>ol>ol>ol>ol>li::before {width: 9.8em;}
+	ol.alg>li::before {width: 1.7em;}
+	ol.alg>ol>li::before {width: 2.7em;}
+	ol.alg>ol>ol>li::before {width: 3.7em;}
+	ol.alg>ol>ol>ol>li::before {width: 4.7em;}
+	ol.alg>ol>ol>ol>ol>li::before {width: 5.7em;}
 	ol.alg li .katex {
 		font-size: 1.2em !important;
 	}
@@ -2514,12 +2513,11 @@
 	}
 	@media (max-width: 900px) {
 		div.compare {display: block;}
-		figure.table {overflow-x: scroll;}
 	}
 	@media (max-width: 600px) {
 		div.content {padding: 0;}
-		section {padding: 1vw 3vw;}
+		section {padding: 1vw 2vw;}
 	}
 	@media (max-width: 500px) {
-		section {padding: 1em 3vw}
+		section {padding: 1vw 2vw}
 	}
