--- a/numerm/static/numerm/styles.css
+++ b/numerm/static/numerm/styles.css
@@ -571,14 +571,15 @@
 		padding-left: 2em;
 	}
 
-	ol.recipe, ol.recipe ol {
+	/* Circle List */
+	ol.recipe, ol.recipe ol, ol.recipe ol ol, ol.recipe ol ol ol {
 		counter-reset: li;
 		list-style: none;
 		*list-style: decimal;
 	}
 	ol.recipe li {
 		position: relative;
-		padding: 0;
+		padding: 0.4rem 0;
 		padding-left: 2em;
 	}
 	ol.recipe li:before {
@@ -587,17 +588,28 @@
 		background-color: var(--darkRed);
 		color: white;
 		border-radius: 50%;
-		font-size: 0.7rem;
+		font-size: 0.69rem;
 		width: 19px;
 		height: 19px;
 		text-align: center;
 		display: block;
 		position: absolute;
-		top: 2px;
+		top: 0.5rem;
 		left: 0;
 	}
-	ol.recipe ol li:before {
+	ol.recipe ol li::before {
+		background-color: rgb(233, 151, 0);
+		
+	}
+	ol.recipe ol ol li::before {
+		background-color: var(--darkGreen);
+		
+	}
+	ol.recipe ol ol ol li::before {
 		background-color: var(--darkBlue);
+	}
+	ol.recipe ol ol ol ol li::before {
+		background-color: rgb(158, 0, 158);
 	}
 
 	ol ol {list-style-type:lower-latin;}
